hphp/hack/test/typecheck/nonnull/null_is_not_of_type_nonnull.php.exp
File "null_is_not_of_type_nonnull.php", line 4, characters 10-13:
Invalid return type (Typing[4110])
File "null_is_not_of_type_nonnull.php", line 3, characters 15-21:
Expected nonnull
File "null_is_not_of_type_nonnull.php", line 4, characters 10-13:
But got null
